# clmm-autopilot

./: .env.example  .gitignore  AGENT.md  Anchor.toml  README.md  SPEC.md  package.json  pnpm-lock.yaml  reviewpack.md  tsconfig.base.json  tsconfig.json  turbo.json
.github/workflows/: ci.yml  devnet-e2e-manual.yml
apps/mobile/: App.tsx  app.json  package.json
apps/mobile/src/: config.ts  mwaSmoke.ts
apps/web/: next.config.ts  package.json
apps/web/src/: config.ts
apps/web/src/app/: page.tsx
diffs/: PR-5-feat-m1-foundations-vs-main.md
docs/: architecture.md  e2e-devnet.md  runbook.md  spec-traceability.md
docs/runbooks/: devnet-e2e.md  mobile-mwa.md
keys/localnet/: receipt-keypair.json
programs/receipt/: Cargo.toml  Xargo.toml
programs/receipt/src/: lib.rs
scripts/: check-anchor-tooling.mjs  check-core-boundaries.mjs  find-devnet-whirlpool-positions.mjs
specs/: README.md  m0-scaffold.spec.md  m1-foundations.spec.md  m10-config-centralization.spec.md  m11-dust-swap-skip.spec.md  m12-devnet-e2e.spec.md  m13-orca-decoder-stabilization.spec.md  m14-swap-adapters.spec.md  m2-receipt-program.spec.md  m3-policy-engine.spec.md  m4-orca-inspector.spec.md  m5-execution-builder.spec.md  m6-shell-ux.spec.md  m7-reliability-hardening.spec.md  m8-pair-guardrails.spec.md  m9-attestation-hash.spec.md
tests/: receipt.ts
