[package]
name = "receipt"
version = "0.1.0"
description = "Execution receipt program (placeholder)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "receipt"

[features]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
